--- a/static/css/overide.scss
+++ b/static/css/overide.scss
@@ -312,13 +312,236 @@
     }
 }
 
+// page_header
+.page_header {
+    h4 {
+        color: var(--black3, #45464e);
+        font-size: 1.6rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin: 0;
+    }
+    .drowpDownbtn {
+        border-radius: 12px;
+        height: 4.5rem;
+        display: grid;
+        place-items: center;
+        background-color: var(--primary-color);
+        color: #fff;
+        width: 100%;
+        max-width: 16.1rem;
+        span {
+            color: currentColor;
+            font-size: 1.4rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            text-transform: capitalize;
+        }
+    }
+}
+
 // content_wrapper
 .content_wrapper {
-    grid-gap: 20px;
     .content_cards {
         padding: 11px 15px;
         background-color: #fff;
         border-radius: 12px;
         min-height: 12.3rem;
+        & > .flex {
+            height: 100%;
+        }
+        .topHeader {
+            .Btn {
+                &.drowpDownbtn {
+                    border-radius: 8px;
+                    padding-inline: 12px;
+                    display: flex;
+                    align-items: center;
+                    grid-gap: 7px;
+                    color: var(--label-fouth-color);
+                    span {
+                        color: currentColor;
+                        font-size: 1.2rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: normal;
+                        text-transform: capitalize;
+                    }
+                    svg {
+                        path {
+                            stroke: currentColor;
+                        }
+                    }
+                    &.variant_primary {
+                        background-color: var(--primary-light-color);
+                        color: var(--primary-color);
+                    }
+                    &.variant_dark {
+                        color: var(--black2);
+                    }
+                }
+            }
+            h3 {
+                font-size: 1.6rem;
+            }
+        }
+        span {
+            font-size: 1.4rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            &.tag {
+                color: var(--label-third-color, #8b8d97);
+            }
+            &.value {
+                color: var(--green);
+                font-size: 1.2rem;
+            }
+            &.date {
+                color: var(--label-fifth-color);
+                font-size: 1.2rem;
+            }
+            &.status {
+                text-transform: capitalize;
+                text-align: center;
+                padding: 2px 15px;
+                font-size: 1.2rem;
+                color: var(--danger-color);
+                background-color: var(--danger-light-color);
+                border-radius: 30px;
+                &.completed {
+                    color: var(--green);
+                    background-color: var(--green-light);
+                }
+            }
+            &.variant_danger {
+                color: var(--danger-color);
+            }
+        }
+        h3 {
+            color: var(--black3, #45464e);
+            font-size: 2rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+        }
+        .searchArea {
+            margin-top: 15px;
+            width: 100%;
+            input {
+                width: 100%;
+                height: 4.5rem;
+                padding: 16px;
+                padding-left: 4rem;
+                transition: all 0.2s ease-in-out;
+                color: var(--black2);
+                font-size: 1.6rem;
+                font-weight: 400;
+                border-radius: 8px;
+                outline: none;
+                border: 1px solid var(--border2, #cfd3d4);
+                &:focus {
+                    background-color: var(--primary-light-color);
+                    border: 1px solid var(--primary-color);
+                    outline: none;
+                    & + .searchIcon {
+                        svg {
+                            path,
+                            circle {
+                                stroke: var(--primary-color);
+                            }
+                        }
+                    }
+                }
+                &::placeholder {
+                    font-weight: 500;
+                    font-size: 1.6rem;
+                    color: var(--placeholder);
+                }
+            }
+            .searchIcon {
+                top: 50%;
+                transform: translateY(-50%);
+                left: 0;
+                height: 100%;
+                width: 4rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                outline: none !important;
+                border: none !important;
+                svg {
+                    path,
+                    circle {
+                        stroke: #130f26;
+                    }
+                }
+            }
+        }
+        &.variant_primary {
+            background-color: var(--primary-color);
+            color: #fff;
+            h3,
+            span.tag {
+                color: currentColor;
+            }
+            span {
+                &.value {
+                    color: var(--textLight);
+                }
+            }
+        }
+        &.variant_order {
+            padding: 20px;
+            ul {
+                li {
+                    padding-block: 12px;
+                    border-bottom: 1px solid var(--border1, #f1f3f9);
+                    aside {
+                        .imageHolder {
+                            cursor: pointer;
+                            width: 4.9rem;
+                            height: 4.9rem;
+                            border-radius: 8px;
+                            border: 1px solid var(--border1, #f1f3f9);
+                            // background: var(--border1);
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: contain;
+                                border-radius: inherit;
+                            }
+                        }
+                        h6,
+                        h4 {
+                            color: var(--black3, #45464e);
+                            font-size: 1.4rem;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: normal;
+                        }
+                        h4 {
+                            font-weight: 500;
+                            color: var(--black4);
+                        }
+                    }
+                    &:first-child {
+                        padding-top: 0;
+                    }
+                }
+            }
+        }
+        &.variant__contact {
+            padding: 0;
+            .topHeader {
+                padding: 22px 24px;
+                h3,
+                span.tag {
+                    font-size: 2rem;
+                }
+            }
+        }
     }
 }
