--- a/static/css/overide.scss
+++ b/static/css/overide.scss
@@ -559,15 +559,15 @@
                 }
             }
             ul {
-                margin-top: -12px;
-                max-height: 60vh;
+                margin-top: -25px;
+                max-height: 65vh;
                 overflow: scroll;
                 &::-webkit-scrollbar {
                     width: 0;
                 }
                 li {
                     padding: 12px 24px;
-                    margin-bottom: 12px;
+                    margin-top: 12px;
                     cursor: pointer;
                     border-bottom: 1px solid var(--border1, #f1f3f9);
                     background: transparent;
@@ -627,7 +627,7 @@
                         border-right-color: var(--primary-color);
                     }
                     &:last-child {
-                        margin-bottom: 0;
+                        margin-top: 0;
                     }
                 }
             }
