--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,6 +8,7 @@
     --infoY: #FFCC91;
     --infoY2: #ffcc9133;
     --infoY3: #FEF5EA;
+    --infoY4: #FFEAD1;
     --black2: #1C1D22;
     --black3: #45464E;
     --black4: #33343A;
@@ -25,6 +26,7 @@
     font-size: 62.5%;
 
     --textLight: #DBDEEE;
+    --textLight2: #B6BFE8;
 
     --label-color: #5e63661a;
     --label-second-color: #6E7079;
@@ -39,6 +41,7 @@
     --tag-status: #C4CAE8;
 
     --hover1: #F7F7FC;
+    --hover2: #F4F5FA;
 
 }
 
@@ -63,7 +66,7 @@ body {
 * {
     font-family: 'Grotesk', sans-serif !important;
     word-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
     transition: all 0.2s ease-in-out;
 }
 
