--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,6 +9,7 @@
     --infoY2: #ffcc9133;
     --infoY3: #FEF5EA;
     --infoY4: #FFEAD1;
+    --infoY5: #FFF2E2;
     --black2: #1C1D22;
     --black3: #45464E;
     --black4: #33343A;
@@ -36,6 +37,7 @@
 
     --border1: #F1F3F9;
     --border2: #cfd3d4;
+    --border3: #E1E2E9;
 
     --placeholder: #ABAFB1;
     --tag-status: #C4CAE8;
