--- a/public/css/responsive.scss
+++ b/public/css/responsive.scss
@@ -45,6 +45,9 @@
 
                 span.infomatics {
                     display: grid !important;
+                    position: static !important;
+                    width: 2.5rem !important;
+                    height: 2.5rem !important;
                 }
             }
         }
